src/ci_provider/github_actions/snapshots/codspeed_runner__ci_provider__github_actions__provider__tests__pull_request_provider_metadata.snap
---
source: src/ci_provider/github_actions/provider.rs
expression: upload_metadata
---
{
  "ref": "refs/pull/22/merge",
  "headRef": "feat/codspeed-runner",
  "baseRef": "main",
  "owner": "my-org",
  "repository": "adrien-python-test",
  "actualCommitHash": "5bd77cb0da72bef094893ed45fb793ff16ecfbe3",
  "commitHash": "24809d9fca9ad0808a777bcbd807ecd5ec8a9100",
  "event": "pull_request",
  "ghData": {
    "runId": 6957110437,
    "job": "log-env",
    "sender": {
      "id": 19605940,
      "login": "adriencaccia"
    }
  },
  "repositoryRootPath": "/home/runner/work/adrien-python-test/adrien-python-test/"
}
